<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2021 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">CameraXVideo</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="capture">Capture</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="Resume">Resume</string>
    <string name="Start">Start</string>
    <string name="Finalize">Finalize</string>
    <string name="Idle">Idle</string>
    <string name="back_button_alt">Back</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="video_viewer_tips">Tips for the page:\n\t- tap anywhere to replay\n\t- tap system back button to go back</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_video">START VIDEO</string>
    <string name="start_video_recording">Start Video Recording</string>
    <string name="upload_to_vimeo">Upload Video</string>
    <string name="capture_status">Status</string>
</resources>
