<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_blue_100_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="V,9:16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/audio_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:buttonTint="@color/txBlack"
        android:background="@color/light_blue_200"
        android:text="@string/audio"
        android:textColor="@color/txBlack"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@id/previewView"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quality_selection"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerVertical="false"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toTopOf="@id/stop_button"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/audio_selection" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_switch"
        android:contentDescription="@string/camera"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/capture_status"
        app:layout_constraintEnd_toStartOf="@+id/capture_button"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/capture_button"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/ic_start"
        android:contentDescription="@string/capture"
        android:scaleType="fitCenter"
        android:translationX="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/camera_button"
        app:layout_constraintEnd_toEndOf="@+id/vertical_guideline"
        app:layout_constraintTop_toTopOf="@+id/camera_button"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/stop_button"
        android:layout_width="96dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_stop"
        android:contentDescription="@string/stop"
        android:scaleType="fitCenter"
        android:translationX="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/capture_button"
        app:layout_constraintStart_toEndOf="@+id/capture_button"
        app:layout_constraintTop_toTopOf="@+id/capture_button"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/capture_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/capture_status"
        android:lines="2"
        android:maxLines="2"
        android:textColor="@color/txWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/camera_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>
